--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active" aria-current="page">
+                                <a href="/index.html" class="nav-link active" aria-current="page">
                                     <svg class="bi pe-none me-2" width="16" height="16">
                                         <use xlink:href="#home"></use>
                                     </svg>
@@ -47,7 +47,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link link-body-emphasis">
+                                <a href="/projects.html" class="nav-link link-body-emphasis">
                                     <svg class="bi pe-none me-2" width="16" height="16">
                                         <use xlink:href="#table"></use>
                                     </svg>
@@ -55,7 +55,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link link-body-emphasis">
+                                <a href="/contact.html" class="nav-link link-body-emphasis">
                                     <svg class="bi pe-none me-2" width="16" height="16">
                                         <use xlink:href="#people-circle"></use>
                                     </svg>
