begin gemaakt aan skill tree

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                                     nog beter te worden.</p>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-6">
+                                
+
+                            </div>
+                            <div class="col-md-3"></div>
+                        </div>
                     </div>
                 </div>
             </div>
