--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,14 @@
                     </div>
                 </div>
 
+
+
+                        <div class="col-md-5 d-flex justify-content">
+                            <img src="./img/communication-email-2-icon-7.png" class="w-50 h-50" alt="">
+                        </div>
+                        <div class="col-md-5"></div>
+                  
+
             </main>
 
             <footer>
