code verfijnd en contact page verbeterd

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                             <svg class="bi pe-none me-2" width="40" height="32">
                                 <use xlink:href="#bootstrap"></use>
                             </svg>
-                            <span class="fs-4">Profile</span>
+                            <span class="fs-4">Profiel</span>
                         </a>
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
