--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                             <svg class="bi pe-none me-2" width="40" height="32">
                                 <use xlink:href="#bootstrap"></use>
                             </svg>
-                            <span class="fs-4">Profile</span>
+                            <span class="fs-4">Profiel</span>
                         </a>
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
@@ -75,41 +75,41 @@
 
 
 
-                <div class="col-md-5 d-flex justify-content">
-                    <img src="./img/communication-email-2-icon-7.png" class="w-50 h-50" alt="">
+                <div class="col-md-5 d-flex justify-content-center">
+                    <img class="w-50 h-50" src="./img/communication-email-2-icon-7.png"alt="">
                 </div>
                 <div class="col-md-5">
-                    <h1>Contact Form</h1>
+                    <h1>Contact Formulier</h1>
                     <form id="contact_form" name="contact_form" method="post">
                         <div class="mb-5 row">
                             <div class="col">
-                                <label>First Name</label>
+                                <label>Naam</label>
                                 <input type="text" required maxlength="50" class="form-control" id="first_name"
                                     name="first_name">
                             </div>
                             <div class="col">
-                                <label>Last Name</label>
+                                <label>Achternaam</label>
                                 <input type="text" required maxlength="50" class="form-control" id="last_name"
                                     name="last_name">
                             </div>
                         </div>
                         <div class="mb-5 row">
                             <div class="col">
-                                <label for="email_addr">Email address</label>
+                                <label for="email_addr">Email adres</label>
                                 <input type="email" required maxlength="50" class="form-control" id="email_addr"
                                     name="email" placeholder="name@example.com">
                             </div>
                             <div class="col">
-                                <label for="phone_input">Phone</label>
+                                <label for="phone_input">Telefoon</label>
                                 <input type="tel" required maxlength="50" class="form-control" id="phone_input"
-                                    name="Phone" placeholder="Phone">
+                                    name="Phone" placeholder="">
                             </div>
                         </div>
                         <div class="mb-5">
-                            <label for="message">Message</label>
+                            <label for="message">Bericht</label>
                             <textarea class="form-control" id="message" name="message" rows="5"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary px-4 btn-lg">Post</button>
+                        <button type="submit" class="btn btn-primary px-4 btn-lg">Verstuur</button>
                     </form>
                 </div>
 
