--- a/contact.html
+++ b/contact.html
@@ -1,129 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio van MBacioglu</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="p-3 mb-2 bg-primary text-white">
-            <h1>Portfolio van MBacioglu</h1>
-            <div class="social-icons">
-                <i class="bi bi-tiktok"></i>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-github"></i>
-                <i class="bi bi-instagram"></i>
-            </div>
+      <div class="p-3 mb-2 bg-primary text-white">
+        <h1>Portfolio van MBacioglu</h1>
+        <div class="social-icons">
+          <i class="bi bi-tiktok"></i>
+          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-github"></i>
+          <i class="bi bi-instagram"></i>
         </div>
+      </div>
     </header>
 
     <main>
-        <div class="container-fluid" style="height: 100vh">
-            <div class="row" style="height: 100%">
-                <div class="col-md-2 themed-grid-col">
-                    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="height: 100%;">
-                        <a href="/"
-                            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                            <svg class="bi pe-none me-2" width="40" height="32">
-                                <use xlink:href="#bootstrap"></use>
-                            </svg>
-                            <span class="fs-4">Profiel</span>
-                        </a>
-                        <hr>
-                        <ul class="nav nav-pills flex-column mb-auto">
-                            <li class="nav-item">
-                                <a href="/index.html" class="nav-link link-body-emphasis" aria-current="page">
-                                    <svg class="bi pe-none me-2" width="16" height="16">
-                                        <use xlink:href="#home"></use>
-                                    </svg>
-                                    Home
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/projects.html" class="nav-link link-body-emphasis">
-                                    <svg class="bi pe-none me-2" width="16" height="16">
-                                        <use xlink:href="#table"></use>
-                                    </svg>
-                                    Projects
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/contact.html" class="nav-link active">
-                                    <svg class="bi pe-none me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle"></use>
-                                    </svg>
-                                    Contact
-                                </a>
-                            </li>
-                        </ul>
-                        <hr>
-                        <div class="dropdown">
-                            <img src="/img/4920418bda4e8898a226c2e6fd772d39.jpg" alt="" width="32" height="32"
-                                class="rounded-circle me-2">
-                            <strong>MBacioglu</strong>
-                        </div>
-                    </div>
+      <div class="container-fluid" style="height: 100vh">
+        <div class="row" style="height: 100%">
+          <div class="col-md-2 themed-grid-col">
+            <div
+              class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary"
+              style="height: 100%"
+            >
+              <a
+                href="/"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+              >
+                <svg class="bi pe-none me-2" width="40" height="32">
+                  <use xlink:href="#bootstrap"></use>
+                </svg>
+                <span class="fs-4">Profiel</span>
+              </a>
+              <hr />
+              <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                  <a
+                    href="/index.html"
+                    class="nav-link link-body-emphasis"
+                    aria-current="page"
+                  >
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                      <use xlink:href="#home"></use>
+                    </svg>
+                    Home
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="/projects.html" class="nav-link link-body-emphasis">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                      <use xlink:href="#table"></use>
+                    </svg>
+                    Projects
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="/contact.html" class="nav-link active">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                      <use xlink:href="#people-circle"></use>
+                    </svg>
+                    Contact
+                  </a>
+                </li>
+              </ul>
+              <hr />
+              <div class="dropdown">
+                <img
+                  src="/img/4920418bda4e8898a226c2e6fd772d39.jpg"
+                  alt=""
+                  width="32"
+                  height="32"
+                  class="rounded-circle me-2"
+                />
+                <strong>MBacioglu</strong>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-5 d-flex justify-content-center">
+            <img
+              class="w-50 h-50"
+              src="./img/communication-email-2-icon-7.png"
+              alt=""
+            />
+          </div>
+          <div class="col-md-5">
+            <h1>Contact Formulier</h1>
+            <form id="contact_form" name="contact_form" method="post">
+              <div class="mb-5 row">
+                <div class="col">
+                  <label>Naam</label>
+                  <input
+                    type="text"
+                    required
+                    maxlength="50"
+                    class="form-control"
+                    id="first_name"
+                    name="first_name"
+                  />
                 </div>
-
-
-
-                <div class="col-md-5 d-flex justify-content-center">
-                    <img class="w-50 h-50" src="./img/communication-email-2-icon-7.png"alt="">
+                <div class="col">
+                  <label>Achternaam</label>
+                  <input
+                    type="text"
+                    required
+                    maxlength="50"
+                    class="form-control"
+                    id="last_name"
+                    name="last_name"
+                  />
                 </div>
-                <div class="col-md-5">
-                    <h1>Contact Formulier</h1>
-                    <form id="contact_form" name="contact_form" method="post">
-                        <div class="mb-5 row">
-                            <div class="col">
-                                <label>Naam</label>
-                                <input type="text" required maxlength="50" class="form-control" id="first_name"
-                                    name="first_name">
-                            </div>
-                            <div class="col">
-                                <label>Achternaam</label>
-                                <input type="text" required maxlength="50" class="form-control" id="last_name"
-                                    name="last_name">
-                            </div>
-                        </div>
-                        <div class="mb-5 row">
-                            <div class="col">
-                                <label for="email_addr">Email adres</label>
-                                <input type="email" required maxlength="50" class="form-control" id="email_addr"
-                                    name="email" placeholder="name@example.com">
-                            </div>
-                            <div class="col">
-                                <label for="phone_input">Telefoon</label>
-                                <input type="tel" required maxlength="50" class="form-control" id="phone_input"
-                                    name="Phone" placeholder="">
-                            </div>
-                        </div>
-                        <div class="mb-5">
-                            <label for="message">Bericht</label>
-                            <textarea class="form-control" id="message" name="message" rows="5"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary px-4 btn-lg">Verstuur</button>
-                    </form>
+              </div>
+              <div class="mb-5 row">
+                <div class="col">
+                  <label for="email_addr">Email adres</label>
+                  <input
+                    type="email"
+                    required
+                    maxlength="50"
+                    class="form-control"
+                    id="email_addr"
+                    name="email"
+                    placeholder="name@example.com"
+                  />
                 </div>
-
-
+                <div class="col">
+                  <label for="phone_input">Telefoon</label>
+                  <input
+                    type="tel"
+                    required
+                    maxlength="50"
+                    class="form-control"
+                    id="phone_input"
+                    name="Phone"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+              <div class="mb-5">
+                <label for="message">Bericht</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  name="message"
+                  rows="5"
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary px-4 btn-lg">
+                Verstuur
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <footer>
+    <footer></footer>
 
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
-</body>
-
+  </body>
 </html>
