--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <div class="col-md-3"></div>
                 </div>
               </div>
-            
+            </div>
             <div class="container">
               <div class="row">
                 <div class="col-md-3"></div>
