--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="p-3 mb-2 bg-primary text-white">
         <h1>Portfolio van MBacioglu</h1>
         <div class="social-icons">
-          <i class="bi bi-tiktok"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-github"></i>
-          <i class="bi bi-instagram"></i>
+          <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
+          <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i class="bi bi-linkedin text-light"></i></a>
+          <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
+          <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i class="bi bi-instagram text-light"></i></a>
         </div>
       </div>
     </header>
@@ -163,7 +163,6 @@
                   <div class="col-md-3"></div>
                 </div>
               </div>
-            </div>
             <div class="container">
               <div class="row">
                 <div class="col-md-3"></div>
