--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
       <div class="p-3 mb-2 bg-primary text-white">
         <h1>Portfolio van MBacioglu</h1>
         <div class="social-icons">
-          <i class="bi bi-tiktok"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-github"></i>
-          <i class="bi bi-instagram"></i>
+          <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
+          <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i class="bi bi-linkedin text-light"></i></a>
+          <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
+          <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i class="bi bi-instagram text-light"></i></a>
         </div>
       </div>
     </header>
@@ -46,7 +46,7 @@
                 <svg class="bi pe-none me-2" width="40" height="32">
                   <use xlink:href="#bootstrap"></use>
                 </svg>
-                <span class="fs-4">Profiel</span>
+                <span class="fs-4">Mirac Bacioglu</span>
               </a>
               <hr />
               <ul class="nav nav-pills flex-column mb-auto">
