--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <svg class="bi pe-none me-2" width="40" height="32">
                   <use xlink:href="#bootstrap"></use>
                 </svg>
-                <span class="fs-4">Profiel</span>
+                <span class="fs-4">Mirac Bacioglu</span>
               </a>
               <hr />
               <ul class="nav nav-pills flex-column mb-auto">
