Me hele project pagina is af, het is verfijnd en het is helemaal in orde alles is ook gelinked

--- a/projects.html
+++ b/projects.html
@@ -77,62 +77,62 @@
                 <div class="container mt-5">
                     <div class="row">
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image1.jpg" class="card-img-top" alt="Project 1">
+                            <div class="card h-100">
+                                <img src="./img/logo.png" class="card-img-top w-50" alt="Project 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 1</h5>
-                                    <p class="card-text">This is a short description of Project 1.</p>
-                                    <a href="project1.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Dashboard Boom</h5>
+                                    <p class="card-text">Dit dashboard heeft alles te maken met energie, we zijn een energie bedrijf genaamd Boom. Je kunt hier van je gas verbruik tot je wind en elektriciteit verbuik dingen over kijken.</p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p04-project-dashboard-boom.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image2.jpg" class="card-img-top" alt="Project 2">
+                            <div class="card h-100">
+                                <img src="./img/523277.jpg" class="card-img-top h-50" alt="Project 2">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 2</h5>
-                                    <p class="card-text">This is a short description of Project 2.</p>
-                                    <a href="project2.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Escaperoom</h5>
+                                    <p class="card-text">In dit project heb ik samen met me teamgenoten een hele enge en griezelige escaperoom gemaakt. Durf jij hem te spelen?</p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p02-escaperoom-team070.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image3.jpg" class="card-img-top" alt="Project 3">
+                            <div class="card h-100">
+                                <img src="./img/Uefa_2013.png" class="card-img-top" alt="Project 3">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 3</h5>
-                                    <p class="card-text">This is a short description of Project 3.</p>
-                                    <a href="project3.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Webcatalogus</h5>
+                                    <p class="card-text">Hier hebben we een webshop gemaakt, het is heel uitgebreid en bevat ook informatie. De webcatalogus gaat over voetbal en we hebben er heel uitgebreid aan gewerkt.</p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p03-project-webcatalogus-taiyab.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image4.jpg" class="card-img-top" alt="Project 4">
+                            <div class="card h-100">
+                                <img src="./img/91883927_2528446960741791_5452484248109842432_n.jpg" class="card-img-top" alt="Project 4">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 4</h5>
-                                    <p class="card-text">This is a short description of Project 4.</p>
-                                    <a href="project4.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Hoger of lager</h5>
+                                    <p class="card-text">In dit project heb ik een spel gebouwd genaamd Hoger Lager, het is interactief en best gaaf. Je gaat dobbelstenen moeten gooien en kijken of het hoger of lager is, ben jij er klaar ervoor?</p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p01-project-hoger-lager-MBacioglu.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image5.jpg" class="card-img-top" alt="Project 5">
+                            <div class="card h-100">
+                                <img src="./img/achtergrond homepagina.png" class="card-img-top " alt="Project 5">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 5</h5>
-                                    <p class="card-text">This is a short description of Project 5.</p>
-                                    <a href="project5.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Build a game</h5>
+                                    <p class="card-text">Met de hulp van 2 andere teamgenoten hebben wij samen 3 games in 1 gemaakt. We hebben Zeeslag gemaakt, Boter Kaas en Eieren gemaakt en Whack-a-mole gemaakt. Probeer jij ze alle 3 uit!</p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p02-project-build-a-game-teammrc.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <img src="image6.jpg" class="card-img-top" alt="Project 6">
+                            <div class="card h-100">
+                                <img src="./img/apple-touch-icon.png" class="card-img-top w-75" alt="Project 6">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project 6</h5>
-                                    <p class="card-text">This is a short description of Project 6.</p>
-                                    <a href="project6.html" class="btn btn-primary">View Project</a>
+                                    <h5 class="card-title">Bootstrap Mockup</h5>
+                                    <p class="card-text">Hier in dit mockup heb ik mijn Bootstrap 5 talenten laten zien. Je kan hier heel goed me passie en talenten voor BS5 zien, het was een zeer leerzame project en ik ben blij dat ik hem heb gemaakt en dat hij zo goed is uitgekomen. </p>
+                                    <a href="https://github.com/ROCMondriaanTIN/sd23-p04-html-bootstrap-mockup-b1m-MBacioglu.git" class="btn btn-primary">Bekijk project</a>
                                 </div>
                             </div>
                         </div>
