succes pagina goed gelinked met contact page en basis van contact page af

--- a/succes.html
+++ b/succes.html
@@ -18,77 +18,6 @@
     />
   </head>
 
-  <main>
-    <div class="container-fluid" style="height: 100vh">
-      <div class="row" style="height: 100%">
-        <div class="col-md-2 themed-grid-col">
-          <div
-            class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary"
-            style="height: 100%"
-          >
-            <a
-              href="/"
-              class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-            >
-              <svg class="bi pe-none me-2" width="40" height="32">
-                <use xlink:href="#bootstrap"></use>
-              </svg>
-              <span class="fs-4">Mirac Bacioglu</span>
-            </a>
-            <hr />
-            <ul class="nav nav-pills flex-column mb-auto">
-              <li class="nav-item">
-                <a
-                  href="/index.html"
-                  class="nav-link link-body-emphasis"
-                  aria-current="page"
-                >
-                  <svg class="bi pe-none me-2" width="16" height="16">
-                    <use xlink:href="#home"></use>
-                  </svg>
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/projects.html" class="nav-link link-body-emphasis">
-                  <svg class="bi pe-none me-2" width="16" height="16">
-                    <use xlink:href="#table"></use>
-                  </svg>
-                  Projects
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="/contact.html" class="nav-link active">
-                  <svg class="bi pe-none me-2" width="16" height="16">
-                    <use xlink:href="#people-circle"></use>
-                  </svg>
-                  Contact
-                </a>
-              </li>
-            </ul>
-            <hr />
-            <div class="dropdown">
-              <img
-                src="/img/4920418bda4e8898a226c2e6fd772d39.jpg"
-                alt=""
-                width="32"
-                height="32"
-                class="rounded-circle me-2"
-              />
-              <strong>MBacioglu</strong>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-5 d-flex justify-content-center">
-          <img
-            class="w-50 h-50"
-            src="./img/communication-email-2-icon-7.png"
-            alt=""
-          />
-        </div>
-    </main>
-
   <body>
     <header>
       <div class="p-3 mb-2 bg-primary text-white">
@@ -101,6 +30,28 @@
         </div>
       </div>
     </header>
+
+
+    <!-- Congratulations area starts -->
+    <div class="congratulation-area text-center mt-5">
+      <div class="container">
+          <div class="congratulation-wrapper">
+              <div class="congratulation-contents center-text">
+                  <div class="congratulation-contents-icon">
+                      <i class="fas fa-check"></i>
+                  </div>
+                  <h4 class="congratulation-contents-title">Bedankt!</h4>
+                  <p class="congratulation-contents-para"> Ik zal zou snel mogelijk bij u terug komen</p>
+                  <div class="btn-wrapper mt-4">
+                      <a href="index.html" class="cmn-btn btn-bg-1">Ga naar home</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+<!-- Congratulations area end -->
+
+
 
 <footer></footer>
 
