--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
           </div>
           <div class="col-md-5">
             <h1>Contact Formulier</h1>
-            <form id="contact_form" action="./succes.html" name="contact_form" method="post">
+            <form id="contact_form" action="succes.html" name="contact_form" method="get">
               <div class="mb-5 row">
                 <div class="col">
                   <label>Naam</label>
