--- a/succes.html
+++ b/succes.html
@@ -1,65 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio van MBacioglu</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-  </head>
 
-  <body>
-    <header>
-      <div class="p-3 mb-2 bg-primary text-white">
-        <h1>Portfolio van MBacioglu</h1>
-        <div class="social-icons">
-          <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
-          <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i class="bi bi-linkedin text-light"></i></a>
-          <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
-          <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i class="bi bi-instagram text-light"></i></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio van MBacioglu</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+</head>
+
+<body>
+  <header>
+    <div class="p-3 mb-2 bg-primary text-white">
+      <h1>Portfolio van MBacioglu</h1>
+      <div class="social-icons">
+        <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
+        <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i
+            class="bi bi-linkedin text-light"></i></a>
+        <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
+        <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i
+            class="bi bi-instagram text-light"></i></a>
+      </div>
+    </div>
+  </header>
+
+  <div class="congratulation-area text-center mt-5">
+    <div class="container">
+      <div class="congratulation-wrapper">
+        <div class="congratulation-contents center-text">
+          <div class="congratulation-contents-icon">
+            <i class="fas fa-check"></i>
+          </div>
+          <h4 class="congratulation-contents-title">Bedankt!</h4>
+          <p class="congratulation-contents-para"> Ik kom zou snel mogelijk bij u terug met een reactie.</p>
+          <div class="btn-wrapper mt-4">
+            <a href="index.html" class="btn btn-primary text-light m-3 rounded-pill p-2 px-5">Ga naar home</a>
+          </div>
         </div>
       </div>
-    </header>
-
-
-    <!-- Congratulations area starts -->
-    <div class="congratulation-area text-center mt-5">
-      <div class="container">
-          <div class="congratulation-wrapper">
-              <div class="congratulation-contents center-text">
-                  <div class="congratulation-contents-icon">
-                      <i class="fas fa-check"></i>
-                  </div>
-                  <h4 class="congratulation-contents-title">Bedankt!</h4>
-                  <p class="congratulation-contents-para"> Ik zal zou snel mogelijk bij u terug komen</p>
-                  <div class="btn-wrapper mt-4">
-                      <a href="index.html" class="cmn-btn btn-bg-1">Ga naar home</a>
-                  </div>
-              </div>
-          </div>
-      </div>
+    </div>
   </div>
-<!-- Congratulations area end -->
 
 
+  <footer></footer>
 
-<footer></footer>
-
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"
-></script>
-<script src="./js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
